Used mapstruct in order to not expose the entities directly, but use DTO's instead.